# nandi

./: .gitignore  CMakeLists.txt  Makefile  build.bat  main.c  readme.md  test.bat
engine/shaders/: n_rasterizer.glsl  n_standard.glsl  n_standard_lit_shader.comp  n_standard_shader_api.glsl  present_shader.comp  present_shader.comp.spv
include/: lodepng.h
include/nandi/: memory.h  n_core.h  n_debug.h  n_error.h  n_graphics.h  n_graphics_shader.h  n_input.h  n_math.h  n_memory.h  n_mesh.h  n_primitives.h  n_string.h  n_test.h  n_threading.h  n_ui.h  nandi.h  nstring.h  primitives.h
include/test/: tests.h
shaders/: rasterizer.comp  shader.comp  shader.comp.spv
src/: CMakeLists.txt  memory.c  n_debug.c  n_error.c  n_graphics_vulkan.c  n_input_windows.c  n_math.c  n_memory.c  n_string.c  n_test.c  n_threading_windows.c  nandi.h  nandi_context.c  nandi_cstring.c  nandi_input_windows.c  nandi_internal.h  nandi_logger_windows.c  nandi_math.c  nandi_memory.c  nandi_stb.c  nandi_test.c  nandi_threading_windows.c  nandi_transform.c  nandi_window_windows.c  nmemory.c  nstring.c  test.c
src/graphics/: graphics_vulkan.c  lodepng.c  n_graphics_camera.c  n_graphics_internal.h  n_graphics_material.c  n_graphics_mesh.c  n_graphics_texture.c  n_graphics_vulkan.c  n_graphics_vulkan.h  n_graphics_window_windows.c  vertex.c
src/memory/: nandi_list.c  (+1 more)
test/: CMakeLists.txt  main.c  main.test.c  n_graphics.test.c  n_math.test.c  n_math_test.c  n_memory.test.c  nandi_context_test.c  nandi_list_test.c  nandi_test.c  nandi_test.h  nandi_test_main.c  nandi_window_test.c  test.c
(+25 files in other folders)
